Fix photo slideshow on small sizes

--- a/disasterinfosite/static/style/app.scss
+++ b/disasterinfosite/static/style/app.scss
@@ -626,10 +626,9 @@ form:invalid {
   border-left-width: 6px;
   flex-basis: min-content;
   padding: 10px;
-  width: auto;
+  max-width: 100%;
 
   @include breakpoint(medium) {
-    margin: 0 auto;
     padding: 20px;
   }
 
@@ -730,7 +729,7 @@ form:invalid {
 /* Historical photos */
 
 .past-photos {
-  width: 335px;
+  max-width: 100%;
   height: 320px;
   margin: 30px auto 0;
 
